--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,16 @@
   <meta content="telephone=no" name="format-detection" />
   <meta name="huaban" content="nopin" />
   <!-- 禁止浏览器放大 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <!-- 引入样式 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.6/lib/index.css">
   <title>我的微店</title>
+  <!-- 网易风控 -->
+  <script src="//cstaticdun.126.net/load.min.js"></script>
 </head>
 
 <body>
-  
   <noscript>
     <strong>该浏览器不支持js</strong>
   </noscript>
