--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
   <title>我的微店</title>
   <!-- 网易风控 -->
   <script src="//cstaticdun.126.net/load.min.js"></script>
+  <!-- 微信分享 -->
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js" type="text/javascript"></script>
 </head>
 
 <body>
