--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <meta name="huaban" content="nopin" />
   <!-- 禁止浏览器放大 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="./favicon.ico">
   <!-- 引入样式 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.6/lib/index.css">
   <title>我的微店</title>
@@ -37,8 +37,6 @@
   <script src="//cstaticdun.126.net/load.min.js"></script>
   <!-- 高德地图 -->
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.8&amp;key=af6d60778f42582277944ce1a64f19f9"></script>
-  <!-- 微信分享 -->
-  <!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js" type="text/javascript"></script> -->
 </head>
 
 <body>
