解决浏览器缓存

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
   <meta name="huaban" content="nopin" />
   <!-- 禁止浏览器放大 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <!-- 解决缓存 -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <link rel="icon" href="./favicon.ico">
   <!-- 引入样式 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.6/lib/index.css">
